Finished the header

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <header>
+      Resume Builder
+      <p><a href="https://github.com/sdhinsa11"><img src = "github.svg" alt="My Happy SVG"/></a></p>
+    </header>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
