Draft of the personal component

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <header>
       Resume Builder
-      <p><a href="https://github.com/sdhinsa11"><img src = "github.svg" alt="My Happy SVG"/></a></p>
+      <p><a href="https://github.com/sdhinsa11"><img src = "github.svg" alt="My Github SVG"/></a></p>
     </header>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
